# pid_motor_baremetal

./: CMakeLists.txt  README.md  driver_encoder_optico.c  driver_encoder_optico.h  encoder_rot.c  encoder_rot.h  logging.c  logging.h  main.c  motor.c  motor.h  pid.c  pid.h
CMSIS_lib/: CMakeLists.txt
